src/test/deca/codegen/valid/testDiv0.deca
// Description:
//    tests conditionnelle
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 15/01/2021
{
int x = 1;
x = x/0;
print("chakhda wlad lhaj");
}
